# eve_discord_timerboard

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  Dockerfile  README.md  docker-compose.traefik.yml  docker-compose.yml  package.json  tailwind.css
.cargo/: config.toml
assets/: tailwind.css
data/: data.txt
entity/src/entities/: channel_fleet_list.rs  discord_guild.rs  discord_guild_channel.rs  discord_guild_member.rs  discord_guild_role.rs  discord_user.rs  fleet.rs  fleet_category.rs  mod.rs  prelude.rs  (+10 more)
migration/src/: lib.rs  m20251210_000001_create_alliance_table.rs  m20251210_000001_create_user_table.rs  m20251210_000001_discord_user.rs  m20251210_000002_create_corporation_table.rs  m20251210_000003_create_character_table.rs  m20251211_000002_create_discord_guild_table.rs  m20251211_000003_create_discord_guild_role_table.rs  m20251211_000004_create_user_discord_guild_table.rs  m20251211_000005_create_user_discord_guild_role_table.rs  m20251211_000006_add_last_synced_at_to_user.rs  m20251211_000006_create_discord_guild_channel_table.rs  m20251211_000007_create_fleet_category_table.rs  m20251212_000008_create_ping_format_fields_table.rs  m20251212_000009_create_fleet_category_table.rs  m20251212_000009_create_ping_format_fields.rs  m20251212_000009_create_ping_format_fields_table.rs  m20251212_000010_create_fleet_category_access_role_table.rs  m20251212_000011_create_fleet_category_ping_role_table.rs  m20251212_000012_create_fleet_category_channel_table.rs  m20251212_000013_create_fleet_table.rs  m20251223_000017_create_ping_group.rs  m20251223_000018_add_ping_group_to_fleet_category.rs
src/: constant.rs  main.rs
src/client/: app.rs  constant.rs  mod.rs  router.rs
src/model/: category.rs  discord.rs  fleet.rs  mod.rs  pagination.rs  ping_format.rs  ping_group.rs  user.rs
src/server/: config.rs  error.rs  mod.rs  router.rs  startup.rs  state.rs
test-utils/: Cargo.toml
test-utils/src/: builder.rs  context.rs  error.rs  lib.rs
(+233 files in other folders)
