[package]
name = "eve_discord_timerboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[dependencies]
axum = { version = "0.8.6", optional = true }
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
dioxus-logger = "0.7.1"
dotenvy = { version = "0.15.7", optional = true }
migration = { path = "migration", optional = true }
oauth2 = { version = "5.0.0", optional = true }
sea-orm = { version = "2.0.0-rc.11", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "with-chrono"
], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = { version = "2.0.17", optional = true }
time = { version = "0.3.44", optional = true }
tower-sessions = { version = "0.14.0", optional = true }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"], optional = true }
url = { version = "2.5.7", optional = true }

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
  "axum",
  "dioxus/server",
  "dotenvy",
  "migration",
  "oauth2",
  "sea-orm",
  "thiserror",
  "time",
  "tower-sessions",
  "tower-sessions-sqlx-store",
  "url"
]
web = ["dioxus/web"]
